@@ -59,10 +59,6 @@ class TestCaseWithSFTPServer(TestCaseWithTransport):
             raise TestSkipped('you must have paramiko to run this test')
         set_test_transport_to_sftp(self)
 
-    def get_transport(self, path=None):
-        """Return a transport relative to self._test_root."""
-        return bzrlib.transport.get_transport(self.get_url(path))
-
 
 class SFTPLockTests (TestCaseWithSFTPServer):
 
